add temtlate for resume, and basic style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
-
+    <div class="wrapper">
+        <div class="main">
+            <div class="main__container __container">
+                <div class="main__body">
+                    <div class="main__sidebar sidebar"></div>
+                    <div class="main__content content"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
