added new blocks: header,contact and styles

--- a/index.html
+++ b/index.html
@@ -11,10 +11,70 @@
 <body>
     <div class="wrapper">
         <div class="main">
-            <div class="main__container __container">
+            <div class="main__container__container">
                 <div class="main__body">
-                    <div class="main__sidebar sidebar"></div>
+                    <div class="main__sidebar sidebar">
+                        <div class="sidebar__container">
+                            <div class="sidebar__body">
+                                <div class="sidebar__header">
+                                    <div class="sidebar__avatar">
+                                        <img src="img/avatar.png" alt="avatar" class="sidebar__img">
+                                    </div>
+                                    <div class="sidebar__text-content">
+                                        <div class="sidebar__title">
+                                            <h1>Denys Shchupak</h1>
+                                        </div>
+                                        <div class="sidebar__subtitle">
+                                            <h2>Trainee Front-end developer</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sidebar__contact">
+                                    <div class="sidebar__contact-block contact">
+                                        <div class="contact__icons">
+                                            <img src="img/envelope.svg" alt="evenlope__icons" class="contact__img">
+                                        </div>
+                                        <div class="contact__link">
+                                            <a href="mailto:shchupakwork@gmail.com" target="_blank"
+                                                class="contact__item">shchupakwork@gmail.com</a>
+                                        </div>
+                                    </div>
+                                    <div class="sidebar__contact-block contact">
+                                        <div class="contact__icons">
+                                            <img src="img/phone.svg" alt="phone__icons" class="contact__img">
+                                        </div>
+                                        <div class="contact__link">
+                                            <a href="tel:380680766305" class="contact__item">+380680766305</a>
+                                        </div>
+                                    </div>
+                                    <div class="sidebar__contact-block contact">
+                                        <div class="contact__icons">
+                                            <img src="img/web.svg" alt="web__icons" class="contact__img">
+                                        </div>
+                                        <div class="contact__link">
+                                            <a href="https://github.com/WiLayd" target="_blank"
+                                                class="contact__item">Github</a>
+                                        </div>
+                                    </div>
+                                    <div class="sidebar__contact-block contact">
+                                        <div class="contact__icons">
+                                            <img src="img/location.svg" alt="location__icons" class="contact__img">
+                                        </div>
+                                        <div class="contact__link">
+                                            <a href="https://goo.gl/maps/FbaiHCbyYw4DSoB36" target="_blank"
+                                                class="contact__item">Vinnytsia</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="sidebar__knowledge">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="main__content content"></div>
+
                 </div>
             </div>
         </div>
