added all left blocks with contact info

--- a/index.html
+++ b/index.html
@@ -66,9 +66,46 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="sidebar__knowledge">
-
+                                <div class="sidebar__knowledge knowledge">
+                                    <div class="knowledge-content">
+                                        <h2 class="knowledge-title">Soft Skills</h2>
+                                        <ul class="knowledge__list">
+                                            <li class="knowledge__link">Online research</li>
+                                            <li class="knowledge__link">Communication</li>
+                                            <li class="knowledge__link">Time management</li>
+                                        </ul>
+                                    </div>
                                 </div>
+                                <div class="sidebar__languages knowledge">
+                                    <div class="knowledge-content">
+                                        <h2 class="knowledge-title">Languages</h2>
+                                        <ul class="knowledge__list">
+                                            <li class="knowledge__link  knowledge__link_without-before">Ukrainian:
+                                                Native
+                                            </li>
+                                            <li class="knowledge__link knowledge__link_without-before">English: Beginner
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="sidebar__social knowledge">
+                                    <div class="knowledge-content">
+                                        <h2 class="knowledge-title">Social</h2>
+                                        <ul class="knowledge__list social__list">
+                                            <li class="knowledge__link_without-before "> <a
+                                                    href="https://www.linkedin.com/in/wilayd/"
+                                                    target="_blank">Linkedin</a>
+                                            </li>
+                                            <li class="knowledge__link_without-before "> <a href="https://t.me/WiLayd"
+                                                    target="_blank">Telegram</a>
+                                            </li>
+                                            <li class="knowledge__link_without-before "> <a
+                                                    href="https://github.com/WiLayd" target="_blank">Github</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
