added rigth column: about me, education, skills

--- a/index.html
+++ b/index.html
@@ -110,7 +110,66 @@
                         </div>
                     </div>
 
-                    <div class="main__content content"></div>
+                    <div class="main__content content">
+                        <div class="content__container">
+                            <div class="content__body">
+                                <div class="content__experience info-block">
+                                    <div class="info-block__general-title">
+                                        <div class="info-block__black-title">
+                                            <h2 class="info-block__headline">ABOUT ME</h2>
+                                        </div>
+                                        <div class="info-block-line"></div>
+                                    </div>
+                                    <div class="info-block__text">
+                                        <h2 class="info-block__title">4th year student</h2>
+                                        <p class="info-block__subtitle info-block__subtitle_smaller-line">Hi, I recently
+                                            graduated from the 3rd year of
+                                            technical university and am trying to gain practical experience for further
+                                            employment, I believe that the binary studio academy gives a great
+                                            opportunity for this.</p>
+                                    </div>
+                                </div>
+                                <div class="content__experience info-block">
+                                    <div class="info-block__general-title">
+                                        <div class="info-block__black-title">
+                                            <h2 class="info-block__headline">EDUCATION</h2>
+                                        </div>
+                                        <div class="info-block-line"></div>
+                                    </div>
+                                    <div class="info-block__text">
+                                        <h2 class="info-block__title">Bachelor of Computer Science</h2>
+                                        <p class="info-block__subtitle">VNTU</p>
+                                        <p class="info-block__time-text">sep 2019 - june 2023</p>
+                                    </div>
+                                    <div class="info-block__text">
+                                        <h2 class="info-block__title">Listener of JavaScript courses</h2>
+                                        <p class="info-block__subtitle">Udemy</p>
+                                        <p class="info-block__time-text">nov 2021 - to the present</p>
+                                    </div>
+                                </div>
+                                <div class="info-block">
+                                    <div class="info-block__general-title">
+                                        <div class="info-block__black-title">
+                                            <h2 class="info-block__headline">MY SKILLS</h2>
+                                        </div>
+                                        <div class="info-block-line"></div>
+                                    </div>
+                                    <div class="info-block skills-block">
+                                        <div class="skills-block__body">
+                                            <ul class="skills-block__list">
+                                                <li class="skills-block__link">HTML</li>
+                                                <li class="skills-block__link">CSS</li>
+                                                <li class="skills-block__link">JavaScript</li>
+                                                <li class="skills-block__link">SCSS</li>
+                                                <li class="skills-block__link">Git</li>
+                                                <li class="skills-block__link">GitHub</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
