added adaptive for all blocks

--- a/index.html
+++ b/index.html
@@ -29,40 +29,40 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="sidebar__contact">
-                                    <div class="sidebar__contact-block contact">
-                                        <div class="contact__icons">
-                                            <img src="img/envelope.svg" alt="evenlope__icons" class="contact__img">
+                                <div class="sidebar__content">
+                                    <div class="sidebar__content-block content-block">
+                                        <div class="content__icons">
+                                            <img src="img/envelope.svg" alt="evenlope__icons" class="content__img">
                                         </div>
-                                        <div class="contact__link">
+                                        <div class="content__link">
                                             <a href="mailto:shchupakwork@gmail.com" target="_blank"
-                                                class="contact__item">shchupakwork@gmail.com</a>
+                                                class="content__item">shchupakwork@gmail.com</a>
                                         </div>
                                     </div>
-                                    <div class="sidebar__contact-block contact">
-                                        <div class="contact__icons">
-                                            <img src="img/phone.svg" alt="phone__icons" class="contact__img">
+                                    <div class="sidebar__content-block content-block">
+                                        <div class="content__icons">
+                                            <img src="img/phone.svg" alt="phone__icons" class="content__img">
                                         </div>
-                                        <div class="contact__link">
-                                            <a href="tel:380680766305" class="contact__item">+380680766305</a>
+                                        <div class="content__link">
+                                            <a href="tel:380680766305" class="content__item">+380680766305</a>
                                         </div>
                                     </div>
-                                    <div class="sidebar__contact-block contact">
-                                        <div class="contact__icons">
-                                            <img src="img/web.svg" alt="web__icons" class="contact__img">
+                                    <div class="sidebar__content-block content-block">
+                                        <div class="content__icons">
+                                            <img src="img/web.svg" alt="web__icons" class="content__img">
                                         </div>
-                                        <div class="contact__link">
+                                        <div class="content__link">
                                             <a href="https://github.com/WiLayd" target="_blank"
-                                                class="contact__item">Github</a>
+                                                class="content__item">Github</a>
                                         </div>
                                     </div>
-                                    <div class="sidebar__contact-block contact">
-                                        <div class="contact__icons">
-                                            <img src="img/location.svg" alt="location__icons" class="contact__img">
+                                    <div class="sidebar__content-block content-block">
+                                        <div class="content__icons">
+                                            <img src="img/location.svg" alt="location__icons" class="content__img">
                                         </div>
-                                        <div class="contact__link">
+                                        <div class="content__link">
                                             <a href="https://goo.gl/maps/FbaiHCbyYw4DSoB36" target="_blank"
-                                                class="contact__item">Vinnytsia</a>
+                                                class="content__item">Vinnytsia</a>
                                         </div>
                                     </div>
                                 </div>
