--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
                                         <p class="info-block__subtitle info-block__subtitle_smaller-line">Hi, I recently
                                             graduated from the 3rd year of
                                             technical university and am trying to gain practical experience for further
-                                            employment, I believe that the binary studio academy gives a great
-                                            opportunity for this.</p>
+                                            employment.</p>
                                     </div>
                                 </div>
                                 <div class="content__experience info-block">
